--- a/horarios_participantes.html
+++ b/horarios_participantes.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Reserva de Reuniones - Incuba Andina Lab</title>
+  <title>Reserva de Reuniones - Participante</title>
   <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -19,6 +19,7 @@
           Reserva de Reuniones<br>
           Bienvenido, <span id="userName"></span>
         </h2>
+        <div id="userFolderLink"></div>
       </div>
     </div>
   </header>
@@ -30,93 +31,111 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js"></script>
-  <script type="module" src="authCheck.js"></script>
-
   <script type="module">
     import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-auth.js";
 
     document.addEventListener('DOMContentLoaded', async () => {
       const auth = getAuth();
+      const calendarEl = document.getElementById('calendar');
       let userEmail = "";
 
-      onAuthStateChanged(auth, user => {
+      // Autenticación y datos del usuario
+      onAuthStateChanged(auth, async user => {
         if (user) {
           userEmail = user.email;
           document.getElementById("userName").textContent = user.displayName || user.email;
+
+          // Enlace a carpeta personal
+          try {
+            const res = await fetch("json/carpetas_personales.json");
+            const data = await res.json();
+            const usuario = data.find(u => u.email === userEmail);
+            if (usuario) {
+              const linkDiv = document.getElementById("userFolderLink");
+              linkDiv.innerHTML = `<strong>Carpeta personal:</strong> <a href="${usuario.link}" target="_blank">Ver carpeta</a>`;
+            }
+          } catch (error) {
+            console.error("Error cargando carpetas personales:", error);
+          }
         } else {
           window.location.href = "index.html";
         }
       });
 
+      // Cargar eventos
       const [andyEvents, dennisseEvents] = await Promise.all([
         fetch('json/andy_eventos.json').then(r => r.json()),
         fetch('json/dennisse_eventos.json').then(r => r.json())
       ]);
 
       const eventos = [
-        ...andyEvents.map(ev => ({ ...ev, color: '#67bf5c' })),
-        ...dennisseEvents.map(ev => ({ ...ev, color: '#c98db1' }))
+        ...andyEvents.map(ev => ({ ...ev, color: '#67bf5c' })),     // Verde
+        ...dennisseEvents.map(ev => ({ ...ev, color: '#c98db1' }))  // Violeta
       ];
 
-      const calendarEl = document.getElementById('calendar');
       const calendar = new FullCalendar.Calendar(calendarEl, {
         initialView: 'timeGridWeek',
         slotMinTime: '08:00:00',
         slotMaxTime: '15:30:00',
         locale: 'es',
-        nowIndicator: true,
         allDaySlot: false,
+        nowIndicator: true,
         events: eventos,
         eventClick: function (info) {
-          if (info.event.extendedProps.estado === "Disponible") {
+          const event = info.event;
+          const props = event.extendedProps;
+
+          // Solo se puede reservar si está disponible
+          if (props.estado === "Disponible") {
             Swal.fire({
-              title: `Reserva con ${info.event.extendedProps.docente}`,
+              title: `Reserva con ${props.docente}`,
               html: `
                 <input type="text" id="nombre" class="swal2-input" placeholder="Nombre del emprendimiento">
-                <input type="email" id="correo" class="swal2-input" placeholder="Correo UAC" value="${userEmail}">
+                <input type="email" id="correo" class="swal2-input" value="${userEmail}" disabled>
                 <input type="tel" id="numero" class="swal2-input" placeholder="Número de celular">
               `,
               confirmButtonText: 'Reservar',
               showCancelButton: true,
               preConfirm: () => {
                 const nombre = document.getElementById('nombre').value;
-                const correo = document.getElementById('correo').value;
                 const numero = document.getElementById('numero').value;
-                if (!nombre || !correo || !numero) {
+                if (!nombre || !numero) {
                   Swal.showValidationMessage('Completa todos los campos');
                 }
-                return { nombre, correo, numero };
+                return { nombre, correo: userEmail, numero };
               }
             }).then(result => {
               if (result.isConfirmed) {
+                event.setProp('title', result.value.nombre);
+                event.setExtendedProp('estado', 'Ocupado');
+                event.setExtendedProp('owner', userEmail);
+                event.setProp('color', '#adb5bd');
                 Swal.fire('¡Reservado!', 'Tu reunión fue registrada correctamente.', 'success');
-                info.event.setProp('title', result.value.nombre);
-                info.event.setExtendedProp('estado', 'Ocupado');
-                info.event.setExtendedProp('owner', userEmail);
-                info.event.setProp('color', '#adb5bd');
+                // Aquí podrías enviar los datos al backend o Firebase
               }
             });
-          } else if (info.event.extendedProps.owner === userEmail) {
+          } else if (props.owner === userEmail) {
             Swal.fire({
-              title: '¿Eliminar tu reserva?',
+              title: '¿Deseas cancelar tu reserva?',
               text: 'Esta acción no se puede deshacer.',
-              showCancelButton: true,
-              confirmButtonText: 'Eliminar',
-              cancelButtonText: 'Cancelar'
+              confirmButtonText: 'Cancelar reserva',
+              showCancelButton: true
             }).then(result => {
               if (result.isConfirmed) {
-                info.event.remove();
+                event.remove();
                 Swal.fire('Eliminado', 'Tu reserva ha sido cancelada.', 'success');
+                // Aquí podrías eliminar del backend o Firebase
               }
             });
           } else {
-            Swal.fire('No disponible', 'Este horario ya fue reservado.', 'error');
+            Swal.fire('No disponible', 'Este horario ya fue reservado.', 'info');
           }
         }
       });
 
       calendar.render();
 
+      // Logout
       document.getElementById("logoutBtn").addEventListener("click", async () => {
         localStorage.removeItem('tipoUsuario');
         localStorage.removeItem('userEmail');
