--- a/horarios_participantes.html
+++ b/horarios_participantes.html
@@ -16,7 +16,7 @@
     </a>
     <div class="header-text">
       <h2>
-        Panel Participante - Gestión de Horarios<br>
+        Panel Participante - Reserva de cita<br>
         Bienvenido, <span id="userName"></span>
       </h2>
       <div id="userFolderLink"></div>
